[package]
name = "mcp-acp-workspace"
version = "1.0.0"
edition = "2021"
authors = ["James Karanja <james.karanja@zavora.ai>"]
description = "ACP Workspace Control Plane — enterprise management of ACP coding delegates with permission gates, patch review, and governance"
license = "Apache-2.0"
repository = "https://github.com/zavora-ai/mcp-acp-workspace"
homepage = "https://enterprise.adk-rust.com"
keywords = ["mcp", "acp", "coding-agent", "workspace", "enterprise"]
categories = ["development-tools"]
readme = "README.md"

[dependencies]
adk-mcp-sdk = "0.1"
rmcp = { version = "1.7", features = ["server", "transport-io", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
